sidecar: integrate dex2jar+enjarify+signature-merge into /convert
The /convert endpoint now runs the full translator pipeline internally, so the
sidecar converts + serves the newest keiyoushi builds on its own (verified: raw
allanime 1.6.24 APK -> convert -> load -> popular returns live data):

- dex2jar -> sigJar (generic Signatures) ; enjarify -> enjJar (correct R8 lambdas)
- mergeSignatures() ports tools/mergesig into Kotlin/ASM: inject dex2jar's
  Signature attributes into enjarify's bytecode.
- enjarify runs via bundled tools/enjarify (Apache-2.0, pure Python) shelled out
  with RENZO_ENJARIFY_DIR / RENZO_PYTHON; falls back to dex2jar+Java-6 downgrade
  when enjarify is unavailable (older extensions still work).

Docker must add python3 + set RENZO_ENJARIFY_DIR to the bundled tools/enjarify.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019v461oYtyHMpe7D6pjM4iq